# test_deep_copy

./: build.sh  buildkokkosSYCL.sh  sourceaurora.sh
src/: CMakeLists.txt  KokkosHeader.hh  main.cpp
